--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "gymnasium>=1.2.2",
+    "keras>=3.12.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
+    "tensorflow>=2.20.0",
 ]
