--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "gym>=0.26.2",
     "gymnasium>=1.2.2",
     "keras>=3.12.0",
     "matplotlib>=3.10.7",
     "numpy>=2.3.5",
+    "pybullet>=3.2.7",
     "tensorflow>=2.20.0",
+    "torch>=2.9.1",
 ]
